sp margin updates

--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -145,7 +145,7 @@
 
         {% if service_provider %}
             {% if environment == "SANDBOX" %}
-                <h2 class="no-top-margin">Creating a service provider account on the sandbox Hub</h2>
+                <h2 class="mt-0">Creating a service provider account on the sandbox Hub</h2>
                 <p class="bold">
                     Please note the following before creating a service provider account:
                 </p>
@@ -168,7 +168,7 @@
                     please <a class="default-a" href="mailto:support@localcontexts.org" target="_blank" rel="noopener">contact us</a>.
                 </p>
             {% else %}
-                <h2 class="no-top-margin">Creating a Service Provider Account</h2>
+                <h2 class="mt-0">Creating a Service Provider Account</h2>
                 <p class="bold">
                     Please note the following before creating a service provider account:
                 </p>
