--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -2,10 +2,10 @@
 
 <div class="flex-this column">
     <div class="flex-this space-between w-100">
-        <h2 class="no-top-margin">Choose an account</h2>
-        <p class="no-top-margin">Received an invite? <a href="{% url 'member-invitations' %}" class="default-a">Go to Profile</a></p>
+        <h2 class="mt-0">Choose an account</h2>
+        <p class="mt-0">Received an invite? <a href="{% url 'member-invitations' %}" class="default-a">Go to Profile</a></p>
     </div>
-    <p class="no-top-margin">Choose an account type that best suites your situation. Depending on the account you select, either join or create a new account. Users can be a member of multiple accounts.</p>
+    <p class="mt-0">Choose an account type that best suites your situation. Depending on the account you select, either join or create a new account. Users can be a member of multiple accounts.</p>
 
     <div class="flex-this column space-between" style="gap:12px;">
 
@@ -20,12 +20,12 @@
                 >
                 <img 
                     loading="lazy" 
-                    class="w-10 margin-left-16 margin-right-16 tiny-label pointer-event-none" 
+                    class="w-10 ml-16 mr-16 tiny-label pointer-event-none" 
                     src="{% static 'images/tk-labels/tk-attribution.png' %}" 
                     alt="TK Attribution Label icon. Black tag shape with two stacked white arrows, one pointing left and one pointing right."
                 >
                 <div class="flex-this column w-80">
-                    <p class="no-bottom-margin no-top-margin">
+                    <p class="mb-0 mt-0">
                         <strong>Community Account</strong>
                         <br>
                         An Indigenous or local community entity or representative who can Customize and apply TK and BC Labels, and create Projects.
@@ -45,12 +45,12 @@
                 >
                 <img 
                     loading="lazy" 
-                    class="w-10 margin-left-16 margin-right-16 tiny-notice pointer-event-none" 
+                    class="w-10 ml-16 mr-16 tiny-notice pointer-event-none" 
                     src="{% static 'images/notices/tk-notice.png' %}" 
                     alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."
                 >
                 <div class="flex-this column w-80">
-                    <p class="no-bottom-margin no-top-margin">
+                    <p class="mb-0 mt-0">
                         <strong>Institution Account</strong>
                         <br>
                         Cultural or research institutions, data repositories, and other organizations can create projects and generate Notices.
@@ -70,12 +70,12 @@
                 >
                 <img 
                     loading="lazy" 
-                    class="w-10 margin-left-16 margin-right-16 tiny-notice pointer-event-none" 
+                    class="w-10 ml-16 mr-16 tiny-notice pointer-event-none" 
                     src="{% static 'images/notices/tk-notice.png' %}" 
                     alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."
                 >
                 <div class="flex-this column w-80">
-                    <p class="no-bottom-margin no-top-margin">
+                    <p class="mb-0 mt-0">
                         <strong>Researcher Account</strong>
                         <br>
                         An individual who carries out academic or scientific research independently or in an institution can create projects and generate Notices.
@@ -95,13 +95,13 @@
                 >
                 <img 
                     loading="lazy" 
-                    class="w-10 margin-left-16 margin-right-16 tiny-notice pointer-event-none" 
+                    class="w-10 ml-16 mr-16 tiny-notice pointer-event-none" 
                     src="{% static 'images/logos/sp-logo-black.png' %}" 
                     alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."
                 >
                 <div class="flex-this column w-80">
-                    <p class="no-bottom-margin no-top-margin bold">Service Provider Account</p>
-                    <p class="no-bottom-margin no-top-margin">Any organization that integrates Local Contexts Labels and Notices into their products.</p>
+                    <p class="mb-0 mt-0 bold">Service Provider Account</p>
+                    <p class="mb-0 mt-0">Any organization that integrates Local Contexts Labels and Notices into their products.</p>
                 </div>           
             </div>
         </div>
