--- a/templates/partials/_member-requests.html
+++ b/templates/partials/_member-requests.html
@@ -17,7 +17,7 @@
         </small>
     </div>
     <div>
-        <h2 class="no-top-margin">Member {% if not service_provider %}Requests{% elif service_provider %}Invites{% endif %}</h2>
+        <h2 class="mt-0">Member {% if not service_provider %}Requests{% elif service_provider %}Invites{% endif %}</h2>
     </div>
 
     {% include 'partials/_alerts.html' %}
