--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -232,7 +232,7 @@
                             {% endif %}
                         >
 
-                            <div class="flex-this space-between margin-top-1">
+                            <div class="flex-this space-between mt-1p">
                                 <div>
                                     <span id="notification-label-tag-{{ n.id }}" 
                                         class="notification-type-tag white-text font-size-12 {% if n.viewed %} grey {% else %} orange-bg {% endif %}"
