--- a/templates/partials/infocards/_service-provider-card.html
+++ b/templates/partials/infocards/_service-provider-card.html
@@ -34,7 +34,7 @@
             <div class="flex-this gap-half">
                 {% if '/registry/' in request.path %}
                     <div>
-                        <div class="margin-bottom-16">
+                        <div class="mr-16">
                             <a 
                                 class="primary-btn action-btn"
                                 href="{% url 'public-service-provider' service_provider.id %}"                    
@@ -56,13 +56,13 @@
                     {% endif %}
                 </div>
                 {% if '/dashboard/' in request.path %}
-                    <div class="margin-left-8 flex-this gap-half">
+                    <div class="ml-8 flex-this gap-half">
                         <!-- Notification -->
                         {% include 'snippets/notifications.html' with scope=service_provider %}
                         <!-- Settings -->
                         {% if request.user == service_provider.account_creator %}
                             <div>
-                                <a href="{% url 'update-service-provider' service_provider.id%}" class="round-btn-small darkteal-text primary-btn white-btn"><i class="no-margin fa fa-cog" aria-hidden="true"></i></a>
+                                <a href="{% url 'update-service-provider' service_provider.id%}" class="round-btn-small darkteal-text primary-btn white-btn"><i class="m-0 fa fa-cog" aria-hidden="true"></i></a>
                             </div>
                         {% endif %}
                     </div>
