--- a/templates/partials/infocards/_service-provider-dashcard.html
+++ b/templates/partials/infocards/_service-provider-dashcard.html
@@ -18,7 +18,7 @@
                 {% include 'snippets/notifications.html' with scope=service_provider %}
 
                 {% if request.user == service_provider.account_creator %}
-                    <div class="margin-left-8">
+                    <div class="ml-8">
                         <a href="{% url 'update-service-provider' service_provider.id%}" class="darkteal-text primary-btn white-btn"> Settings <i class="fa fa-cog" aria-hidden="true"></i></a>
                     </div>
                 {% endif %}
