--- a/templates/serviceproviders/connections.html
+++ b/templates/serviceproviders/connections.html
@@ -2,7 +2,7 @@
 
 <div class="content-card-v2 content-card-space">
     <div class="w-70">
-        <h2 class="no-top-margin">Connections</h2>
+        <h2 class="mt-0">Connections</h2>
         <p>
             Connections are established when Labels are applied to a Project by a community or when this account is added to a Project as a contributor.
             Here you can see all the accounts that you have collaborated on Projects with.
